📄 Adding + working RabbitMQ tutorials

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 jar {
@@ -13,5 +14,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.rabbitmq:amqp-client:5.16.0'
+    implementation 'org.slf4j:slf4j-simple:1.7.26'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+}
+
+application {
+    mainClassName = project.hasProperty("main") ?
+            project.getProperty("main") : "NULL"
 }
