--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,11 @@ plugins {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.hubsante.Example'
+        attributes 'Main-Class': 'com.hubsante.Dispatcher'
+    }
+    // Building a fat jar (with dependencies) | Ref.: https://www.baeldung.com/gradle-fat-jar
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
@@ -15,7 +19,6 @@ repositories {
 
 dependencies {
     implementation 'com.rabbitmq:amqp-client:5.16.0'
-    implementation 'org.slf4j:slf4j-simple:1.7.26'
     implementation 'org.json:json:20220924'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
