--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'com.rabbitmq:amqp-client:5.16.0'
     implementation 'org.slf4j:slf4j-simple:1.7.26'  // Used by RabbitMQ
     implementation 'org.json:json:20220924'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
 
