--- a/rabbitmq/rabbitmq.conf
+++ b/rabbitmq/rabbitmq.conf
@@ -12,6 +12,12 @@ loopback_users.guest = false
 ## a container
 log.console = true
 
+# TCP conf (port 5672)
+## Ref.: https://stackoverflow.com/a/54202069/10115198
+## Do not disable as this is used by dispatcher internally
+## But docker-compose doesn't expose port 5672 externally
+## listeners.tcp  = none
+
 # TLS CONF
 ## Ref.: https://www.rabbitmq.com/ssl.html#enabling-tls
 listeners.ssl.default = 5671
@@ -20,7 +26,7 @@ ssl_options.cacertfile = /etc/rabbitmq/certs/rootCA.crt
 ssl_options.certfile   = /etc/rabbitmq/certs/hub.crt
 ssl_options.keyfile    = /etc/rabbitmq/certs/hub.key
 ssl_options.verify     = verify_peer
-ssl_options.fail_if_no_peer_cert = false
+ssl_options.fail_if_no_peer_cert = true
 
 ## Ref.: https://www.rabbitmq.com/ssl.html#tls-versions
 ssl_options.versions.1 = tlsv1.2
