📦 Adding RabbitMQ config on startup

--- a/rabbitmq/rabbitmq.conf
+++ b/rabbitmq/rabbitmq.conf
@@ -30,3 +30,7 @@ ssl_options.fail_if_no_peer_cert = true
 
 ## Ref.: https://www.rabbitmq.com/ssl.html#tls-versions
 ssl_options.versions.1 = tlsv1.2
+
+# RabbitMQ definitions on start
+## Ref.: https://stackoverflow.com/a/71035760/10115198
+management.load_definitions = /etc/rabbitmq/definitions.json
