--- a/hub/src/main/resources/application.properties
+++ b/hub/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.rabbitmq.ssl.trust-store-password=trustStore
 # uncomment first two occurrences for local build or last two for container build
 spring.rabbitmq.ssl.key-store=file:C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/certs/client.p12
 spring.rabbitmq.ssl.trust-store=file:C:/dev/ANS/SAMU/HubSante/repository/SAMU-Hub-Sante/certs/truststore
-#spring.rabbitmq.ssl.key-store=file:/user/app/certs/client.p12
-#spring.rabbitmq.ssl.trust-store=file:/user/app/certs/truststore
+#spring.rabbitmq.ssl.key-store=file:/usr/app/certs/client.p12
+#spring.rabbitmq.ssl.trust-store=file:/usr/app/certs/truststore
