--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ python/templates/4. tls/cert/
 certs/CA/
 !certs/CA/sign.sh
 !certs/CA/rootCA.crt
+
+# Needed as GitHub action for AsyncAPI generation installs npm packages
+node_modules/
+package-lock.json
+package.json
