--- a/.github/workflows/models.yml
+++ b/.github/workflows/models.yml
@@ -1,11 +1,16 @@
-name: Documentation Site Generator
+name: Data Models Generator
 
 on: pull_request
 
 jobs:
   build:
+    name: Generate and commit data models
     runs-on: ubuntu-latest
-    name: Generate and commit docs site files
+
+    strategy:
+      matrix:
+        language: [ ubuntu-latest ]
+
     steps:
       # first checkout your code
       - name: Checkout 🛎
@@ -23,22 +28,23 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-generator
+          key: ${{ runner.os }}-node-modelina
 
       - name: Install AsyncAPI Generator 👨🏻‍💻
-        run: npm i @asyncapi/generator
+        run: cd models && npm ci
 
-      # Use AsyncAPI generator to generate the HTML bundle
-      - name: Generate docs for Hub Santé interface ⚙️
-        run: npx ag src/main/resources/hubsante.asyncapi.yaml @asyncapi/html-template -o docs/specs
+      # Use AsyncAPI generator to generate classes
+      - name: Generate models based on Hub Santé interface ⚙️
+        run: cd models && npm run generate4Hub
 
       - name: Commit files ✅
         run: |
           git config --local user.email "Docs-Generator[bot]@users.noreply.github.com"
           git config --local user.name "Docs-Generator[bot]"
-          git add docs/specs
+          git add models/generated
+          git add src/main/java/com/hubsante/message/*
           # Commit only if needed | Ref.: https://stackoverflow.com/a/8123841/10115198
-          git diff-index --quiet HEAD || git commit -m "⚙️ Auto-génération de la documentation"
+          git diff-index --quiet HEAD || git commit -m "⚙️ Auto-génération des classes"
 
       - name: Push changes ⬆️
         uses: ad-m/github-push-action@master
