include cisu json-schema in asyncapi

--- a/dispatcher/src/main/resources/hubsante.asyncapi.yaml
+++ b/dispatcher/src/main/resources/hubsante.asyncapi.yaml
@@ -170,6 +170,7 @@ components:
           description: 'ID du message'
         content:
           type: object
+          $ref: './cisu.json#/Message'
           description: 'Objet libre de contenu du message'
       additionalProperties: false
       required:
