--- a/dispatcher/build.gradle
+++ b/dispatcher/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.json:json:20220924'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
