--- a/client/build.gradle
+++ b/client/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.26'  // Used by RabbitMQ
     implementation 'org.json:json:20220924'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'com.networknt:json-schema-validator:1.0.79'
     implementation 'org.jetbrains:annotations:23.0.0'
