--- a/hub/build.gradle
+++ b/hub/build.gradle
@@ -15,7 +15,7 @@ java {
 }
 
 springBoot {
-	mainClass = 'com.hubsante.dispatcher.HubApplication'
+	mainClass = 'com.hubsante.hub.HubApplication'
 }
 
 configurations {
@@ -38,6 +38,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.json:json:20220924'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
